# cargodrop

./: Cargo.toml  README.md
airdrop/: Cargo.toml
airdrop/src/: error.rs  lib.rs  main.rs
airdrop/src/models/: device.rs  message.rs  mod.rs  transfer.rs
airdrop/src/network/: cert.rs  client.rs  crypto.rs  discovery.rs  mod.rs  protocol.rs  server.rs  transfer.rs
airdrop/src/utils/: logger.rs  mod.rs
airdrop/tests/: network_tests.rs
doc/: architecture.puml
src/: cli.rs  main.rs  use_cases.rs
src/ble/: advertise.rs  discover.rs  mod.rs
src/examples/: secure_test.rs
src/network/: file_transfer.rs  tcp_client.rs  tcp_server.rs
src/rendezvous/: mod.rs
src/rendezvous/ble_rendezvous/: advertise.rs  discover.rs  mod.rs
src/rendezvous/lan_rendezvous/: mod.rs
src/security/: contact.rs  encryption.rs  handshake.rs  identity.rs  mod.rs
src/ui/: cli_handler.rs  egui_app.rs  gui_handler.rs  interaction.rs  mod.rs
src/user_info/: mod.rs  network.rs
