[package]
name = "cargodrop"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
ble-peripheral-rust = "0.2.0"
btleplug = "0.12.0"
chrono = "0.4.44"
dirs = "5.0"
futures = "0.3.32"
hostname = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
egui = "0.27"
eframe = "0.27"
thiserror = "1.0"