[package]
name = "airdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
mdns-sd = "0.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
x25519-dalek = "2.0"
rand = "0.8"

# QUIC
quinn = "0.11"
quinn-proto = "0.11"
rustls = { version = "0.22", features = ["log"] }
rustls-pemfile = "2.0"
rcgen = "0.11"
x509-parser = "0.15"